# devflow

./: .env.example  .gitignore  Cargo.toml  README.md
crates/devflow/: Cargo.toml
crates/devflow-core/: Cargo.toml
crates/devflow-core/src/: lib.rs  metrics.rs  types.rs
crates/devflow-core/src/github/: mod.rs  raw.rs
crates/devflow/src/: app.rs  demo.rs  main.rs
crates/devflow/src/ui/: authors.rs  ci.rs  mod.rs  overview.rs  repos.rs  sparkline.rs  theme.rs
docs/: RFC-devflow.md
