[workspace]
members  = ["crates/devflow-core", "crates/devflow"]
resolver = "2"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"

[workspace.package]
version   = "0.1.0"
edition   = "2021"
license   = "MIT"

[workspace.dependencies]
tokio              = { version = "1",    features = ["full"] }
serde              = { version = "1",    features = ["derive"] }
serde_json         = "1"
anyhow             = "1"
thiserror          = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest            = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
chrono             = { version = "0.4",  features = ["serde"] }
dotenvy            = "0.15"
futures-util       = "0.3"
ratatui            = "0.29"
crossterm          = "0.28"
