[package]
name        = "devflow-core"
description = "GitHub data fetcher + DORA metrics engine"
version.workspace   = true
edition.workspace   = true
license.workspace   = true

[dependencies]
tokio.workspace      = true
serde.workspace      = true
serde_json.workspace = true
anyhow.workspace     = true
thiserror.workspace  = true
tracing.workspace    = true
reqwest.workspace    = true
chrono.workspace       = true
dotenvy.workspace      = true
futures-util.workspace = true
