[package]
name        = "devflow"
description = "DORA metrics dashboard for GitHub teams"
version.workspace   = true
edition.workspace   = true
license.workspace   = true

[[bin]]
name = "devflow"
path = "src/main.rs"

[dependencies]
devflow-core         = { path = "../devflow-core" }
tokio.workspace      = true
serde.workspace      = true
serde_json.workspace = true
anyhow.workspace     = true
thiserror.workspace  = true
tracing.workspace    = true
tracing-subscriber.workspace = true
ratatui.workspace    = true
crossterm.workspace  = true
chrono.workspace     = true
dotenvy.workspace    = true
